Thu Jun  6 00:04:38 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (all-windows): Don't pass $(LIBCMD) on the command
		line.  It's set in the windows.in prologue for all Makefiles anyway.

Wed Feb  7 00:23:18 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Folded in danw's changes to allow
		building Makefiles for the Macintosh.  We now can build
		MPW makefiles which are interpreted by CodeWarrior.

Fri Nov  3 21:12:31 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Added memory subdirectory

Fri Oct  6 22:03:30 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Sep 25 16:56:30 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Tue Aug 29 13:35:23 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in, .Sanitize, ser_cc.c - Add new ccache handle serialization
		routines.

Fri Jun  9 19:31:13 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.  Use DO_SUBDIRS to
		recurse down subdirectories.

Fri May 26 20:19:26 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for building shared libraries.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* ccbase.c: removed unneeded INTERFACE from non-api functions.

Wed Mar 22 11:47:49 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in (CFLAGS): Make -I options work when the build and
		source tree are different.

Fri Mar 17 19:19:07 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Remove, duplicates config/pre.in.
	(CFLAGS):  Add -I options for file and stdio, to avoid paths in
	#include statements.
	(all-mac, clean-mac):  Add.
	* ccdefops.c:  Avoid includes with pathnames, since they don't work
	on the Mac.  Configure the default cache based on whether the
	system has <sys/types.h> (which defines types for low-level file