@@ -26,10 +26,10 @@
 
 #include "k5-int.h"
 
-krb5_error_code INTERFACE
+KRB5_DLLIMP krb5_error_code KRB5_CALLCONV
 krb5_cc_default(context, ccache)
    krb5_context context;
-   krb5_ccache *ccache;
+   krb5_ccache FAR *ccache;
 {
     return krb5_cc_resolve(context, krb5_cc_default_name(context), ccache);
 }
