@@ -1,7 +1,15 @@
+Thu Nov 21 11:55:16 EST 1996    Richard Basch   <basch@lehman.com>
+
+        * Makefile.in: win32 build
+
+	* ccbase.c, ccdefault.c:
+	DLL export basic ccache functions
+
 Thu Jun  6 00:04:38 1996  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* Makefile.in (all-windows): Don't pass $(LIBCMD) on the command
-		line.  It's set in the windows.in prologue for all Makefiles anyway.
+		line.  It's set in the windows.in prologue for all
+		Makefiles anyway.
 
 Wed Feb  7 00:23:18 1996  Theodore Y. Ts'o  <tytso@dcl>
 
